<resources>
    <string name="app_name">Schedule</string>
    <string name="week_days">Week days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_hours">Hours</string>
    <string name="all_days">All days</string>
    <string name="delete_lesson">Delete lesson</string>
    <string name="add_lesson">Add lesson</string>
    <string name="lesson">Lesson</string>
    <string name="save">Save</string>
    <string name="enter_minutes">Minutes</string>
    <string name="delete">Delete</string>
</resources>